# ModifiedDieselWolf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dataset_Test_Notebook.ipynb  Demodulation.ipynb  Dockerfile  Model_Architecture_Upgrades.ipynb  Modulation_Classification.ipynb  README.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
configs/: mobile_rat.yaml  nmformer.yaml
dieselwolf/: __init__.py  callbacks.py  complex_layers.py  metrics.py  optim.py  tuning.py
dieselwolf/data/: TransformsRF.py  (+5 more)
docs/: deploy_to_sdr.md  project_management.md
notebooks/: Configurable_CNN_Demo.ipynb  Configurable_MobileRaT_Demo.ipynb  Configurable_NMformer_Demo.ipynb  Dataset_Test_Notebook.ipynb  Dataset_Tutorial.ipynb  Demodulation.ipynb  Evaluation_Tutorial.ipynb  Training_Tutorial.ipynb  make_paths_absolute.py
scripts/: benchmark.py  benchmark_onnx.py  export_onnx.py  finetune_pruned.py  pretrain_ssl.py  prune.py  quantize_onnx.py  sync_tasks_to_github.py  train_amr.py  tune_cnn.py  tune_mobilerat.py
tests/: test_amrclassifier.py  test_benchmark.py  test_benchmark_onnx.py  test_cochannel_interferer.py  test_complex_layers.py  test_configurable_mobile_rat.py  test_configurable_nmformer.py  test_doppler_shift.py  test_factory.py  test_finetune_pruned.py  test_grid_search.py  test_mobile_rat.py  test_moco_resume.py  test_nmformer.py  test_prune.py  test_radioml_dataset.py  test_snr_callback.py  test_tdl_nakagami.py  test_tdl_rayleigh.py  test_tdl_rician.py  test_tune_cnn.py  test_tune_mobilerat.py
(+14 files in other folders)
