[project]
name = "dieselwolf"
version = "0.1.0"
description = "Automatic Modulation Recognition research platform"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch==2.0.1",
    "numba==0.58.1",
    "numpy==1.26.0",
    "matplotlib==3.8.0",
    "scikit-learn==1.3.0",
    "scipy==1.11.0",
    "jupyter==1.0.0",
    "typing_extensions==4.7.1",
    "transformers==4.34.1",
    "pytorch-lightning==2.2.1",
    "torchmetrics==0.11.4",
    "onnxruntime==1.22.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
